[Move] Java + SpringBoot の形式に揃える

--- a/rsvsystem/src/main/resources/templates/rsv_state.html
+++ b/rsvsystem/src/main/resources/templates/rsv_state.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>現在の予約状況</title>
-	<link rel="stylesheet" href="rsv_state.css">
+	<link rel="stylesheet" href="../static/css/rsv_state.css">
 </head>
 
 <body>
