--- a/rsvsystem/src/main/resources/templates/rsv_state.html
+++ b/rsvsystem/src/main/resources/templates/rsv_state.html
@@ -1,3 +1,4 @@
+<!-- test -->
 <html>
 <html lang="ja" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 	<meta charset="UTF-8">
