--- a/rsvsystem/src/main/resources/templates/rsv_state.html
+++ b/rsvsystem/src/main/resources/templates/rsv_state.html
@@ -52,15 +52,22 @@
 				<tbody>
 					<tr>
 						<td>1コマ目<br>09:00 - 10:10</td>
-						<td class="state1_101">&nbsp;</td>
-						<td class="state1_102">&nbsp;</td>
-						<td class="state1_103">&nbsp;</td>
-						<td class="state1_104">&nbsp;</td>
-						<td class="state1_201">&nbsp;</td>
-						<td class="state1_202">&nbsp;</td>
-						<td class="state1_301">&nbsp;</td>
-						<td class="state1_302">&nbsp;</td>
-						<td class="state1_303">&nbsp;</td>
+						<!-- こういう感じで挿入されたらいいな…(ﾁﾗｯﾁﾗｯ) -->
+						<!-- "info"は吹き出しで表示される内容(予約の詳細) -->
+						<td id="state1_101" class="ja"><p>国語</br>平野 柴耀</p>
+							<p class="info">メンバーカラーは</br>深紅です。</p></td>
+						<td id="state1_102" class="ma"><p>数学</br>永瀬 廉</p>
+							<p class="info">メンバーカラーは</br>漆黒です。</td>
+						<td id="state1_103" class="sci"><p>理科</br>神宮寺 勇太</p>
+							<p class="info">メンバーカラーは</br>ターコイズブルーです。</td>
+						<td id="state1_104" class="so"><p>社会</br>髙橋 海人</p>
+							<p class="info">メンバーカラーは</br>ひまわりイエローです。</td>
+						<td id="state1_201" class="en"><p>英語</br>岸 優太</p>
+							<p class="info">メンバーカラーは</br>紫です。</td>
+						<td id="state1_202">&nbsp;</td>
+						<td id="state1_301">&nbsp;</td>
+						<td id="state1_302">&nbsp;</td>
+						<td id="state1_303">&nbsp;</td>
 					</tr>
 					<tr>
 						<td>2コマ目<br>10:25 - 11:35</td>
