--- a/rsvsystem/src/main/resources/templates/logout_confirm.html
+++ b/rsvsystem/src/main/resources/templates/logout_confirm.html
@@ -16,8 +16,8 @@
         </div>
         <ul>
             <li><b><a href='home.html' th:href='@{home}'>ホーム</a></b></li>
-            <li><b><a href='rsv_apply.html' th:href='@{rsv_apply}'>予約申請</a></b></li>
-            <li><b><a href='rsv_state.html' th:href='@{rsv_state}'>予約状況</a></b></li>
+            <li><b><a href='rsv_apply.html' th:href='@{rsv_apply}'>新規予約</a></b></li>
+            <li><b><a href='rsv_state.html' th:href='@{rsv_state}'>現在の予約状況</a></b></li>
             <li><b><a href="logout_confirm.html" th:href='@{logout}'>ログアウト</a></b></li>
         </ul>
     </div>
